--- a/app/views/posts/list.html.erb
+++ b/app/views/posts/list.html.erb
@@ -10,6 +10,7 @@
       <th>Categories</th>
       <th>Status</th>
       <th>Comments</th>
+      <th>Friends</th>
     </tr>
 
     <% @posts.each do |post| %>
