--- a/app/views/posts/list.html.erb
+++ b/app/views/posts/list.html.erb
@@ -10,7 +10,6 @@
       <th>Categories</th>
       <th>Status</th>
       <th>Comments</th>
-      <th>Friends</th>
     </tr>
 
     <% @posts.each do |post| %>
@@ -29,4 +28,6 @@
     </tr>
     <% end %>
 </table>
+
+<%= link_to("New Post", :action => 'new') %>
 
