--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,12 +1,12 @@
 <% @page_title = "Editing Post" %>
 
-<%= link_to("<< Back to List", {:action => 'list'} %>
+<%= link_to("<<Back to list", {:action => 'list'}) %>
 
-  <%= form_for(:post, :url => {:action => 'update'}) do |f| %>
-  
-    <%= render(:partial => "form", :locals => {:f => f}) %>
-    
-     <%= submit_tag("Edit", :style => "margin: 1.5em 0 0 100px;") %>
+<%= form_for(:post, :url => {:action => 'update', :id => @post.id}) do |f| %>
+
+	<%= render(:partial => 'form', :locals => {:f => f}) %>
+
+	<%= submit_tag('Edit', :style => "margin: 1.5em 0 0 100px;") %>
+
 	<% end %>
-
 <%= link_to('Show Post', {:action => 'show', :id => @post}, :target => '_blank') %>
