--- a/app/views/categories/list.html.erb
+++ b/app/views/categories/list.html.erb
@@ -1,6 +1,6 @@
 <% @page_title = "Categories" %>
  
-  <%= link_to(">>Back", {:controller => 'category',:action => 'menu'}) %>
+  <%= link_to(">>Back", {:controller => 'staff',:action => 'menu'}) %>
   
   <table>
     <tr>
@@ -24,7 +24,7 @@
 
 
 
-<%= form_for(:category, :url => {:action => 'create'}) do |f|  %>
+<%= form_for(:category, params[:id].blank? ? {:url => {:action => 'create'}} : {:url => {:action => 'update', :id => @category}}) do |f|  %>
 
 <table>
   <tr>
@@ -38,12 +38,9 @@
 
     <td><%= f.text_field(:short_name, :size => 20) %></td>
 
-    <td><%= f.text_field(:description, :size => 35) %></td>
+    <td><%= f.text_field(:description, :size => 40) %></td>
     
-    <td><%= submit_tag('Create Category') %></td>
+    <td><%= submit_tag(params[:id].blank? ? "Create" : "Edit") %></td>
   </tr>
 </table>
 <% end %> 
-
-
-
