Another technique where create & update is done in one action

--- a/app/views/users/manage.html.erb
+++ b/app/views/users/manage.html.erb
@@ -10,7 +10,7 @@
 		<% if params[:id].blank? %>
 	<h1>New user</h1>
 
-	<%= form_for(:user, :url => { :action => 'create'}) do |f| %>
+	<%= form_for(:user, :url => { :action => 'manage'}) do |f| %>
 	  <%= render(:partial => "form", :locals => {:f => f}) %>
 	  <%= submit_tag("Create") %>
 	<% end %>  
@@ -18,13 +18,13 @@
 	<% else %>
 	   <h1>Editing user</h1>
 
-	   <%= form_for(:user, :url => {:action => 'update', :id => @user.id}) do |f| %>
+	   <%= form_for(:user, :url => {:action => 'manage', :id => @user}) do |f| %>
 
 	   		<%= render(:partial => "form", :locals => { :f => f }) %>
 	   		<%= submit_tag("Edit") %>
 	   <% end %>
 
-	   <%= link_to('Destroy User', { :action => 'manage', :id => @user }, :method => :delete, data: {:confirm => 'Are you sure?'}) %>
+	   <%= link_to('Destroy User', { :action => 'delete', :id => @user }, :method => :delete, data: {:confirm => 'Are you sure?'}) %>
 
 	  <% end %>
 	  
