Conditional link to the commentlist

--- a/app/views/comments/list.html.erb
+++ b/app/views/comments/list.html.erb
@@ -3,10 +3,10 @@
   <%= link_to(">>Back", {:controller => 'staff',:action => 'menu'}) %>
 
   <p>Show:
-      <%= link_to('all', :status => 'all') %>&nbsp; |
-      <%= link_to('new', :status => nil) %>&nbsp; |
-      <%= link_to('approved', :status => 'approved') %>&nbsp; |
-      <%= link_to('spam', :status => 'spam') %>&nbsp;
+      <%= link_to_unless_current('all', :status => 'all') %>&nbsp; |
+      <%= link_to_unless_current('new', :status => nil) %>&nbsp; |
+      <%= link_to_unless_current('approved', :status => 'approved') %>&nbsp; |
+      <%= link_to_unless_current('spam', :status => 'spam') %>&nbsp;
   </p>
   
   <%= form_for(@comments, :url => {:action => 'set_status'}) do %>
