Public site of the posts

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -1,2 +1,12 @@
 /* This is the stylesheet for the public area */
 /* It is intended to be supplemental to sblog.css */
+
+#left-column { float: left; width: 730px; margin: 2em 1em; }
+#right-column { float: right; width: 180px; margin: 2em 1em; }
+
+.post { margin-bottom: 2em; }
+.post .title { font-size: 1.2em; font-weight: bold; }
+.post .author { font-size: .8em; }
+.post .date { font-size: .8em; }
+.post .body { margin: 1em 0; }
+.post .categories { font-size: .8em; }
