--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -4,8 +4,8 @@
     <td><%= f.text_field(:username)%></td>
   </tr>
   <tr>
-    <th><%= f.label(:hashed_password) %></th>
-    <td><%= f.password_field(:hashed_password) %></td>
+    <th><%= f.label(:password) %></th>
+    <td><%= f.password_field(:password) %></td>
   </tr>
   <tr>
     <th><%= f.label(:first_name) %></th>
