--- a/app/views/main/list.html.erb
+++ b/app/views/main/list.html.erb
@@ -1,18 +1,9 @@
 <div id="left-column">
 	<div id="posts">
-		<% @posts.each do |post| %>
-			<div class="post">
-				<div class="title"><%= post.title %></div>
-				<div class="byline">
-					<span class="author">by <%= post.author.display_name %></span>
-					<span class="date">on <%= strip_zeroes_from_date(post.created_at.strftime("%B *%d, %Y")) %>(<%= use_relative_time(post.created_at) %>)</span>
-				</div>
-				<div class="body"><%= prepare_post_body(post.content) %></div>
-				<div class="other-info">
-					<span class="categories">Posted in <%= post.categories.collect {|cat| cat.name}.to_sentence %></span>
-				</div>
-			</div>
-		<% end %>
+		<%# @posts.each do |post| %>
+			<%#= render(:partial => 'post', :locals => {:post => post}) %>
+		<%# end %>
+		<%= render(:partial => 'post', :collection => @posts) %>
 	</div>
 </div>
 
