--- a/app/views/shared/view_post.html.erb
+++ b/app/views/shared/view_post.html.erb
@@ -1,10 +1,14 @@
 <div id="left-column">
-	<div id="posts">
+	<p><%= link_to("Back to Main Site", {:action => "list"},
+								:style => 'font-size: .8em;') %></p>
+			
 		<%# @posts.each do |post| %>
 			<%#= render(:partial => 'post', :locals => {:post => post}) %>
 		<%# end %>
-		<%= render(:partial => 'shared/post', :collection => @posts) %>
-	</div>
+			<%= render(:partial => 'shared/post', :locals => {:post => @post}) %>
+		
+	
+
 </div>
 
 <div id="right-column">
