--- a/app/views/shared/view_post.html.erb
+++ b/app/views/shared/view_post.html.erb
@@ -1,3 +1,4 @@
+
 <div id="left-column">
 	<p><%= link_to("Back to Main Site", {:action => "list"},
 								:style => 'font-size: .8em;') %></p>
@@ -8,7 +9,15 @@
 			<%= render(:partial => 'shared/post', :locals => {:post => @post}) %>
 
 		<div class="comments">
+		<a name="comments"></a>
 			<%= render(:partial => 'shared/comment', :collection => @post.approved_comments) %>
+		</div>
+
+		<div class="comment-form">
+			<%= form_for(:comment, :url => {:action => "add_comment", :id => @post.id}) do |f| %>
+				<%= render(:partial => 'shared/comment_form', :locals => {:f => f}) %>
+				<%= submit_tag("Submit Comment", :style => "margin-left: 105px;") %>
+			<% end %>
 		</div>
 </div>
 
