--- a/app/assets/stylesheets/sblog.css
+++ b/app/assets/stylesheets/sblog.css
@@ -20,3 +20,17 @@ h2 { font-family: Georgia, Times, serif; margin-bottom: 1em; }
 #pagecontent h1 { color: #800000; }
 a, a:visited { color: #800000; }
 a:hover { background: #CCCCCC; }
+
+
+/* Errors */
+.fieldWithErrors { }
+.fieldWithErrors label { color: #AA0000; }
+.fieldWithErrors input { }
+#errorExplanation { width: 400px; padding: 0; margin: 0 auto 1.5em; 
+  border: 1px solid #AA0000; background-color: #FFFFFF; font-size: 12px; }
+#errorExplanation h2 { font-weight: bold; font-size: 12px;
+  padding: 5px 5px 5px 15px; margin: 0; width: 380px;
+  background-color: #AA0000; color: #FFFFFF; }
+#errorExplanation p { color: #333333; margin: 0; padding: 3px 0.5em; }
+#errorExplanation ul { margin-top: 0; }
+#errorExplanation ul li { list-style: square; }
