--- a/app/assets/stylesheets/staff.css
+++ b/app/assets/stylesheets/staff.css
@@ -16,3 +16,17 @@
 .comment{ padding: .5em 1em .5em 1em; }
 .comment-lead{ font-size: .75em; }
 .comment-text{ padding: .5em .5em 1em .5em; }
+
+
+/* Errors */
+.fieldWithErrors { }
+.fieldWithErrors label { color: #AA0000; }
+.fieldWithErrors input { }
+#errorExplanation { width: 400px; padding: 0; margin: 0 auto 1.5em; 
+  border: 1px solid #AA0000; background-color: #FFFFFF; font-size: 12px; }
+#errorExplanation h2 { font-weight: bold; font-size: 12px;
+  padding: 5px 5px 5px 15px; margin: 0; width: 380px;
+  background-color: #AA0000; color: #FFFFFF; }
+#errorExplanation p { color: #333333; margin: 0; padding: 3px 0.5em; }
+#errorExplanation ul { margin-top: 0; }
+#errorExplanation ul li { list-style: square; }
