--- a/app/views/shared/view_post.html.erb
+++ b/app/views/shared/view_post.html.erb
@@ -27,5 +27,5 @@
 
 <div id="right-column">
 	<%= render(:partial => 'custom/about') %>
-	<%= render(:partial => 'categories') %>
+	<%= render(:partial => 'shared/categories') %>
 </div>
